.provarCaches/00D410000011HE0EAM/objects/rstk__plmimport__c.object
<CustomObject>
    <description>plmimport__c</description>
    <fields>
        <fullName>PLM_Items_in_Session__c</fullName>
        <label>PLM Items in Session</label>
        <summaryForeignKey>rstk__plmitem__c.rstk__plmitem_plmimport__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__plmimport_sessionid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__plmimport_addprod__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Products for Parent Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__plmimport_datetime__c</fullName>
        <label>Import Request Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__plmimport_econum__c</fullName>
        <label>Change Order Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__plmimport_ecoref__c</fullName>
        <label>Change Order Reference</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__plmimport_engdiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engineering Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>PLM Import Sessions (Engineering Division)</relationshipLabel>
        <relationshipName>plmimports2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__plmimport_errors__c</fullName>
        <label>Errors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__plmimport_iccomcod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Commodity Code</label>
        <referenceTo>rstk__iccomcod__c</referenceTo>
        <relationshipLabel>PLM Import Sessions</relationshipLabel>
        <relationshipName>plmimports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__plmimport_invdiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>PLM Import Sessions</relationshipLabel>
        <relationshipName>plmimports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__plmimport_itemsok__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Items Processed OK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__plmimport_lastplmimport__c</fullName>
        <label>Prior Import Request Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__plmimport_plmItemValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked , Indicate no data error in PLM Import Item record</description>
        <inlineHelpText>If checked , Indicate no data error in PLM Import Item record</inlineHelpText>
        <label>PLM Import Item Validated OK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__plmimport_ready__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__plmimport_salesdiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>PLM Import Sessions (Sales Division)</relationshipLabel>
        <relationshipName>plmimports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__plmimport_sessionid__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Session ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstk__plmimport_socomm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Product Group</label>
        <referenceTo>rstk__socomm__c</referenceTo>
        <relationshipLabel>PLM Import Sessions</relationshipLabel>
        <relationshipName>plmimports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__plmimport_status__c</fullName>
        <label>Import Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Retry</fullName>
                </value>
                <value>
                    <fullName>Ok</fullName>
                </value>
                <value>
                    <fullName>Errors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>PLM Import Session</label>
    <listViews>
        <fullName>PLM_Import_Sessions</fullName>
        <columns>NAME</columns>
        <columns>rstk__plmimport_sessionid__c</columns>
        <columns>rstk__plmimport_status__c</columns>
        <columns>rstk__plmimport_ready__c</columns>
        <columns>rstk__plmimport_itemsok__c</columns>
        <columns>rstk__plmimport_addprod__c</columns>
        <columns>rstk__plmimport_errors__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__plmimport_engdiv__c</columns>
        <columns>rstk__plmimport_invdiv__c</columns>
        <columns>rstk__plmimport_salesdiv__c</columns>
        <columns>rstk__plmimport_iccomcod__c</columns>
        <columns>rstk__plmimport_socomm__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>PLM Import Sessions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PLM_Import_Sessions_Today</fullName>
        <columns>NAME</columns>
        <columns>rstk__plmimport_sessionid__c</columns>
        <columns>rstk__plmimport_status__c</columns>
        <columns>rstk__plmimport_ready__c</columns>
        <columns>rstk__plmimport_itemsok__c</columns>
        <columns>rstk__plmimport_errors__c</columns>
        <columns>rstk__plmimport_plmItemValidated__c</columns>
        <columns>PLM_Items_in_Session__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>rstk__plmimport_invdiv__c</columns>
        <columns>rstk__plmimport_iccomcod__c</columns>
        <columns>rstk__plmimport_addprod__c</columns>
        <columns>rstk__plmimport_socomm__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:2</value>
        </filters>
        <label>PLM Import Sessions - Last 2 Days</label>
    </listViews>
    <listViews>
        <fullName>PLM_Sessions_Today</fullName>
        <columns>NAME</columns>
        <columns>rstk__plmimport_sessionid__c</columns>
        <columns>rstk__plmimport_status__c</columns>
        <columns>rstk__plmimport_ready__c</columns>
        <columns>rstk__plmimport_itemsok__c</columns>
        <columns>rstk__plmimport_addprod__c</columns>
        <columns>rstk__plmimport_errors__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__plmimport_engdiv__c</columns>
        <columns>rstk__plmimport_invdiv__c</columns>
        <columns>rstk__plmimport_salesdiv__c</columns>
        <columns>rstk__plmimport_iccomcod__c</columns>
        <columns>rstk__plmimport_socomm__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>PLM Sessions - Today</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PLM Import Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>